traversal.snake.Snake.scala.error
Erreur de compilation :
Snake:3: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (estFaceMur()) {
    ^Snake:6: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (getDirection() == Direction.EST){
    ^Snake:13: error: illegal start of declaration (possible cause: missing `=' in front of current method body)
    if (getDirection() == Direction.OUEST){
    ^